[gd_scene load_steps=11 format=2]

[ext_resource path="res://Graphics/Buttons/ConstructBuildings.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlanetHUD.gd" type="Script" id=2]
[ext_resource path="res://Graphics/Buttons/StarSystemView.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Buttons/Mine.png" type="Texture" id=5]

[sub_resource type="InputEventAction" id=1]
action = "mine"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "construct"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "view_star_system"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="PlanetHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 64.0
margin_bottom = 720.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mine" type="TextureButton" parent="VBoxContainer"]
margin_top = 264.0
margin_right = 64.0
margin_bottom = 328.0
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construct" type="TextureButton" parent="VBoxContainer"]
margin_top = 328.0
margin_right = 64.0
margin_bottom = 392.0
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StarSystem" type="TextureButton" parent="VBoxContainer"]
margin_top = 392.0
margin_right = 64.0
margin_bottom = 456.0
shortcut_in_tooltip = false
shortcut = SubResource( 6 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="VBoxContainer/Mine" to="." method="_on_Mine_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Mine" to="." method="_on_Mine_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Mine" to="." method="_on_Mine_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Construct" to="." method="_on_Construct_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Construct" to="." method="_on_Construct_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Construct" to="." method="_on_Construct_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/StarSystem" to="." method="_on_StarSystem_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StarSystem" to="." method="_on_StarSystem_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/StarSystem" to="." method="_on_StarSystem_pressed"]
